[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ns3-csv-to-flent"
version = "0.1.0"
description = "Convert ns-3 simulation CSV bundles to Flent JSON v1 (.flent.gz) for replay in flent --plot"
requires-python = ">=3.9"
authors = [{name = "Sergio Andreozzi"}]
license = {text = "GPL-2.0-only"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "numpy>=1.20"]

[project.scripts]
ns3-csv-to-flent = "ns3_csv_to_flent.__main__:cli"

[tool.setuptools]
packages = ["ns3_csv_to_flent", "ns3_csv_to_flent.schemas"]
